# enigo

./: .gitignore  .travis.yml  CHANGES.md  Cargo.toml  DEBUGGING.md  LICENSE  Permissions.md  README.md  appveyor.yml  binary_keymap.txt  build.rs  enigo.txt  enigo_no_timestamps.txt  fixed_wayland_output.txt  fixed_wayland_output_no_timestamps.txt  keymap.txt  output_example.txt  output_squeekboard.txt  output_sway.txt  output_sway_empty_keymap.txt  output_with_keymaps.txt  output_with_keymaps2.txt  raw_keymap_file  received_2.txt  received_3.txt  received_keymap.txt  received_keymap_fixed.txt  sent_keymap.txt  sqeekboard.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md  questions.md
.github/actions/headless_display/: action.yml
.github/actions/install_deps/: action.yaml  action.yml
.github/actions/screenshot/: action.yml
.github/workflows/: CI.yml  build.yaml  build.yml  build_example.yaml  cross_compile.yaml  docs.yml  examples.yml  failing_tests.yml  format.yml  integration.yml  security_audit.yml  test.yml  tests.yml
examples/: calc_f16.rs  crash.rs  dsl.rs  ext.rs  key.rs  keyboard.rs  layout.rs  main.rs  mouse.rs  parse_received_keymap.rs  parser.rs  platform_specific.rs  serde.rs  streams.rs  sync.rs  timer.rs
src/: agent.rs  dsl.rs  keycodes.rs  lib.rs  linux.rs  macos.rs  parser.rs  platform.rs  serde.rs  test_mouse.rs  win.rs
src/linux/: constants.rs  keymap.rs  keysyms.rs  libei.rs  linux_impl.rs  mod.rs  wayland.rs  x11rb.rs  xdg_desktop.rs  xdo.rs
src/linux/keymap2/: default_keymap.rs  mod.rs  parse_keymap.rs
src/linux/submitter/: wayland.rs
src/linux/submitter/wayland/: keymap.rs  layer_shell.rs  vk_service.rs
src/macos/: keycodes.rs  macos_impl.rs  mod.rs
src/tests/: keyboard.rs  mod.rs  mouse.rs
src/win/: keycodes.rs  mod.rs  win_impl.rs
tests/: browser.rs  index.html  integration_browser.rs
tests/common/: browser.rs  browser_events.rs  enigo_test.rs  key.rs  mod.rs  mouse.rs
tests/firefox-profile/: user.js
